# KedroPipeline-Jules

./: .gitignore  README.md  categorize_image_data.py  clean_data_folder.py  combine_per_image_info.py  large_scale_automation.py  postprocess.py  pyproject.toml
conf/base/: catalog.yml  parameters.yml
src/data_pipeline/: __init__.py  __main__.py  pipeline_registry.py  prepare_cropped_data.py  settings.py
src/data_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
src/data_pipeline/pipelines/utils/: checkpoint_manager.py  correct_angle.py  crop_from_coordinates.py  detect_obb_coordinates.py  detect_region_by_words.py  detect_region_by_words_base.py  detect_region_by_words_gilan.py  detect_region_by_words_kerman.py  detect_region_by_words_kermanshah.py  detect_region_by_words_sari.py  detect_region_by_words_tehran.py  graph_model.py  load_paddle_model.py  load_rules.py  preprocesses.py  read_postcode.py  read_postcode_base.py  read_postcode_gilan.py  read_postcode_kerman.py  read_postcode_kermanshah.py  read_postcode_sari.py  read_postcode_tehran.py  read_text.py
src/data_pipeline/pipelines/utils/CONSTS/: CONSTS.py  patterns.xlsx  spell_correction_dict.json
src/data_pipeline/pipelines/utils/CONSTS_gilan/: CONSTS_gilan.py  graph_rules.json  patterns.xlsx  postcode_correction.xlsx  special_places.xlsx  valid_regions.xlsx
src/data_pipeline/pipelines/utils/CONSTS_kerman/: CONSTS_kerman.py  CONSTS_sari.py  postcode_correction.xlsx
src/data_pipeline/pipelines/utils/CONSTS_kermanshah/: CONSTS.py  CONSTS_kermanshah.py  graph_rules.json  patterns.xlsx  (+2 more)
(+6 files in other folders)
